[tool.poetry]
name = "pyaiagent"
version = "0.1.0"
description = "A simple Python package to create AI agents"
readme = "README.md"
authors = ["Sayantika Banik <workwith.sayantika@gmail.com>"]
license = "MIT"
packages = [{include = "pyaiagent"}]
homepage = "https://github.com/sayantikabanik/PyAIAgent"

[tool.hatch.metadata]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7.0"
openai = "*"
langchain = "*"
transformers = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
